# LlamaDeck

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
backend/: config.py  database.py  main.py
backend/models/: schemas.py
backend/routers/: credentials.py  gguf_library.py  import_gguf.py  instances.py  models.py  pull.py  tasks.py
backend/services/: credential_store.py  credentials.py  gguf_parser.py  instance_manager.py  ollama_client.py  task_manager.py
backend/static/: index.html
backend/static/css/: style.css
backend/static/js/: app.js
tests/: test_gguf_parser.py  test_ollama_client.py
